Cambios en Maquetacion

--- a/content/css/AdminLTE.css
+++ b/content/css/AdminLTE.css
@@ -10589,3 +10589,22 @@ Info Box
 textarea {
   resize: none;
 }
+/*!
+ * materialize
+ * Version - 1.5
+ * Licensed under the MIT license - http://opensource.org/licenses/MIT
+ *
+ * Copyright (c) 2016 Alejandro Gmz
+ */
+/*
+ * hoverable
+ */
+.hoverable {
+  transition: box-shadow .55s;
+  box-shadow: 0;
+}
+
+.hoverable:hover {
+  transition: box-shadow .45s;
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
